--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p>Ich arbeite als Fotograf und Filme auch oft Videos</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<p></p>Als Fotograf, der sich auch mit Videografie beschäftigt, habe ich das Privileg, Momente festzuhalten und Geschichten durch Bilder und Bewegtbild zu erzählen. Mit meiner Kamera erkunde ich die Welt, suche nach einzigartigen Perspektiven und fange die Schönheit des Lebens ein, sei es in einem einzigen Bild oder in einer dynamischen Videosequenz. Durch meine Arbeit als Fotograf und Videograf kann ich Emotionen einfangen, Erinnerungen bewahren und den Betrachtern neue Blickwinkel bieten.
 							</article>
 
 						<!-- About -->
