--- a/index.html
+++ b/index.html
@@ -63,7 +63,40 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<p>
+Stefan Buchsteiner
+
+Adresse: Maier 38, 5452 Pfarrwerfen
+Telefon: 0677/62880089 oder 0664/75061616
+E-Mail: buchsteiner.stefan@johak.at
+Geburtsdatum: 12.07.2008 in Schwarzach
+Staatsbürgerschaft: Österreich
+Ausbildung:
+
+Volksschule: 2014 – 2018, Pfarrwerfen
+Privatgymnasium St. Rupert: 2018 – 2022, Bischofshofen
+IT-HAK: seit 2022, St. Johann im Pongau
+Sprachen:
+
+Deutsch (Muttersprache)
+Englisch
+Kenntnisse:
+
+EDV: MS-Office
+Musik: Leistungsabzeichen in Bronze (Schlagwerk)
+Feuerwehrjugend:
+
+Wissenstest/Wissensspiel: Bronze/Silber/Gold
+Leistungsbewerb: Bronze
+Praktikum:
+
+Eisriesenwelt Werfen/Parkwächter: 24. Juli – 23. August 2023
+Hobbys:
+
+Musikkapelle Pfarrwerfen (Schlagwerk)
+Feuerwehr Pfarrwerfen
+Skifahren
+Formel 1</p>
 							</article>
 
 						<!-- Contact -->
