--- a/index.html
+++ b/index.html
@@ -67,19 +67,15 @@
 Stefan Buchsteiner
 
 Adresse: Maier 38, 5452 Pfarrwerfen
-Telefon: 0677/62880089 oder 0664/75061616
-E-Mail: buchsteiner.stefan@johak.at
-Geburtsdatum: 12.07.2008 in Schwarzach
-Staatsbürgerschaft: Österreich
+Kontakt: 0677/62880089 oder 0664/75061616, buchsteiner.stefan@johak.at
+Geburtsdatum: 12.07.2008 in Schwarzach, Österreich
 Ausbildung:
 
 Volksschule: 2014 – 2018, Pfarrwerfen
 Privatgymnasium St. Rupert: 2018 – 2022, Bischofshofen
 IT-HAK: seit 2022, St. Johann im Pongau
-Sprachen:
+Sprachen: Deutsch (Muttersprache), Englisch
 
-Deutsch (Muttersprache)
-Englisch
 Kenntnisse:
 
 EDV: MS-Office
@@ -88,15 +84,9 @@ Feuerwehrjugend:
 
 Wissenstest/Wissensspiel: Bronze/Silber/Gold
 Leistungsbewerb: Bronze
-Praktikum:
+Praktikum: Eisriesenwelt Werfen/Parkwächter: 24. Juli – 23. August 2023
 
-Eisriesenwelt Werfen/Parkwächter: 24. Juli – 23. August 2023
-Hobbys:
-
-Musikkapelle Pfarrwerfen (Schlagwerk)
-Feuerwehr Pfarrwerfen
-Skifahren
-Formel 1</p>
+Hobbys: Musikkapelle Pfarrwerfen (Schlagwerk), Feuerwehr Pfarrwerfen, Skifahren, Formel 1</p>
 							</article>
 
 						<!-- Contact -->
