--- a/index.html
+++ b/index.html
@@ -64,29 +64,25 @@
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<p>
-Stefan Buchsteiner
+<b>Stefan Buchsteiner</b>
 
 Adresse: Maier 38, 5452 Pfarrwerfen
 Kontakt: 0677/62880089 oder 0664/75061616, buchsteiner.stefan@johak.at
 Geburtsdatum: 12.07.2008 in Schwarzach, Österreich
-Ausbildung:
-
+									
+<b>Ausbildung:</b>
 Volksschule: 2014 – 2018, Pfarrwerfen
 Privatgymnasium St. Rupert: 2018 – 2022, Bischofshofen
 IT-HAK: seit 2022, St. Johann im Pongau
 Sprachen: Deutsch (Muttersprache), Englisch
 
-Kenntnisse:
-
+<b>Kenntnisse:</b>
 EDV: MS-Office
 Musik: Leistungsabzeichen in Bronze (Schlagwerk)
-Feuerwehrjugend:
-
-Wissenstest/Wissensspiel: Bronze/Silber/Gold
-Leistungsbewerb: Bronze
+Feuerwehrjugend: Wissenstest/Wissensspiel: Bronze/Silber/Gold; Leistungsbewerb: Bronze
 Praktikum: Eisriesenwelt Werfen/Parkwächter: 24. Juli – 23. August 2023
 
-Hobbys: Musikkapelle Pfarrwerfen (Schlagwerk), Feuerwehr Pfarrwerfen, Skifahren, Formel 1</p>
+<b>Hobbys:</b> Musikkapelle Pfarrwerfen (Schlagwerk), Feuerwehr Pfarrwerfen, Skifahren, Formel 1</p>
 							</article>
 
 						<!-- Contact -->
