--- a/index.html
+++ b/index.html
@@ -66,20 +66,20 @@
 								<p>
 <b>Stefan Buchsteiner</b>
 <p>
-Adresse: Maier 38, 5452 Pfarrwerfen
-Kontakt: 0677/62880089 oder 0664/75061616, buchsteiner.stefan@johak.at
+Adresse: Maier 38, 5452 Pfarrwerfen <br>
+Kontakt: 0677/62880089 oder 0664/75061616, buchsteiner.stefan@johak.at<br>
 Geburtsdatum: 12.07.2008 in Schwarzach, Österreich
 <p></p>									
 <b>Ausbildung:</b>
-Volksschule: 2014 – 2018, Pfarrwerfen
-Privatgymnasium St. Rupert: 2018 – 2022, Bischofshofen
-IT-HAK: seit 2022, St. Johann im Pongau
+Volksschule: 2014 – 2018, Pfarrwerfen<br>
+Privatgymnasium St. Rupert: 2018 – 2022, Bischofshofen<br>
+IT-HAK: seit 2022, St. Johann im Pongau<br>
 Sprachen: Deutsch (Muttersprache), Englisch
 <p></p>
 <b>Kenntnisse:</b>
-EDV: MS-Office
-Musik: Leistungsabzeichen in Bronze (Schlagwerk)
-Feuerwehrjugend: Wissenstest/Wissensspiel: Bronze/Silber/Gold; Leistungsbewerb: Bronze
+EDV: MS-Office<br>
+Musik: Leistungsabzeichen in Bronze (Schlagwerk)<br>
+Feuerwehrjugend: Wissenstest/Wissensspiel: Bronze/Silber/Gold; Leistungsbewerb: Bronze<br>
 Praktikum: Eisriesenwelt Werfen/Parkwächter: 24. Juli – 23. August 2023
 <p></p>
 <b>Hobbys:</b> Musikkapelle Pfarrwerfen (Schlagwerk), Feuerwehr Pfarrwerfen, Skifahren, Formel 1</p>
