--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@ Adresse: Maier 38, 5452 Pfarrwerfen <br>
 Kontakt: 0677/62880089 oder 0664/75061616, buchsteiner.stefan@johak.at<br>
 Geburtsdatum: 12.07.2008 in Schwarzach, Österreich
 <p></p>									
-<b>Ausbildung:</b>
+<b>Ausbildung:</b><br>
 Volksschule: 2014 – 2018, Pfarrwerfen<br>
 Privatgymnasium St. Rupert: 2018 – 2022, Bischofshofen<br>
 IT-HAK: seit 2022, St. Johann im Pongau<br>
 Sprachen: Deutsch (Muttersprache), Englisch
 <p></p>
-<b>Kenntnisse:</b>
+<b>Kenntnisse:</b><br>
 EDV: MS-Office<br>
 Musik: Leistungsabzeichen in Bronze (Schlagwerk)<br>
 Feuerwehrjugend: Wissenstest/Wissensspiel: Bronze/Silber/Gold; Leistungsbewerb: Bronze<br>
