--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ Musik: Leistungsabzeichen in Bronze (Schlagwerk)<br>
 Feuerwehrjugend: Wissenstest/Wissensspiel: Bronze/Silber/Gold; Leistungsbewerb: Bronze<br>
 Praktikum: Eisriesenwelt Werfen/Parkwächter: 24. Juli – 23. August 2023
 <p></p>
-<b>Hobbys:</b> Musikkapelle Pfarrwerfen (Schlagwerk), Feuerwehr Pfarrwerfen, Skifahren, Formel 1</p>
+<b>Hobbys:</b><br> Musikkapelle Pfarrwerfen (Schlagwerk), Feuerwehr Pfarrwerfen, Skifahren, Formel 1</p>
 							</article>
 
 						<!-- Contact -->
