--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+								<span class="image main"><img src="images/image-01.jpg" alt="" /></span>
 								<p>Ich arbeite als Fotograf und Filme auch oft Videos</p>
 								<p></p>Als Fotograf, der sich auch mit Videografie beschäftigt, habe ich das Privileg, Momente festzuhalten und Geschichten durch Bilder und Bewegtbild zu erzählen. Mit meiner Kamera erkunde ich die Welt, suche nach einzigartigen Perspektiven und fange die Schönheit des Lebens ein, sei es in einem einzigen Bild oder in einer dynamischen Videosequenz. Durch meine Arbeit als Fotograf und Videograf kann ich Emotionen einfangen, Erinnerungen bewahren und den Betrachtern neue Blickwinkel bieten.
 							</article>
@@ -62,7 +62,7 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+								<span class="image main"><img src="images/image-02.jpg" alt="" /></span>
 								<p>
 <b>Stefan Buchsteiner</b>
 <p>
