--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+								<span class="image main"><img src="images/image-03.jpg" alt="" /></span>
 								<p>Ich komme aus Pfarrwerfen bin dort bei der Feuerwehr und bei der Musikkapelle ich habe mich schon immmer sehr führ Computer interressiert weswegen ich in die IT Klasse der JOHAHK gegangen bin.</a>.</p>
 								<p>Ich find es faszinierend zu fotografieren und Websiten zu programmieren.</p>
 							</article>
